--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   get_it: ^7.7.0
-  image_picker: ^1.1.2
+  image_picker:
   google_ml_kit: ^0.18.0
+  http: ^1.2.2
+  
+  path_provider: ^2.1.4
+  
 
 dev_dependencies:
   flutter_test:
